objects/echosign_dev1__SIGN_Form_Field_Mapping_Entry__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Field_Reference_Name__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Field_Mapping__c</fullName>
        <label>Form Field Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Form_Field_Mapping__c</referenceTo>
        <relationshipLabel>EchoSign Form Field Mapping Entries</relationshipLabel>
        <relationshipName>Object_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Object_Reference_Path__c</fullName>
        <label>Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce Object Field</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Constant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>EchoSign Form Field Mapping Entry</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>EchoSign Form Field Mapping Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EchoSign Form Field Mapping Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>